# signal-detection-benchmark

./: config.yaml  index.html  objects.inv  pyproject.toml  results_b1.html  results_b2.html  results_b3.html  run_this_benchmark_1024.py  run_this_benchmark_256.py  run_this_benchmark_512.py  searchindex.js
_sources/: index.md.txt  results_b2.md.txt  results_b3.md.txt
results/: results_b1.md  results_b2.md
results/b1/: plot_LinearChirp.html
results/b2/: plot_LinearChirp.html  results_LinearChirp.csv
results/b3/: plot_LinearChirp.html
src/methods/: method_envelope_test.py  method_global_mad_test.py
src/utilities/: spatstats_utils.py  utilstf.py
